objects/BRNSHRK__Brainshark_Coaching__c.object
<CustomObject>
    <fields>
        <fullName>BRNSHRK__BnskIsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__CoachingActivityId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Coaching Activity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__CreatedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Brainshark_Coachings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Brainshark Coaching</label>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Brainshark Coaching Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brainshark Coaching</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>